# qdx-assess

./: .gitignore  image_classifier.py  requirements.txt
program/: Cargo.toml  flake.nix
program/src/: image_classifier.py  lib.rs  main.rs
rust_program/: Cargo.toml
rust_program/src/: main1.rs
